--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-beautiful-dnd": "^12.2.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-datepicker": "^2.10.1",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "semantic-ui-react": "^0.88.2",
